# glfw_builded_project

./: CMakeLists.txt
src/: main.cpp
